Fixed damage card not showing properly
Fixed damage card critical or empaling result not showing properly;

--- a/styles/chat/damage.less
+++ b/styles/chat/damage.less
@@ -5,7 +5,7 @@
   }
   .options {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: nowrap;
     align-items: center;
   }
